// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderer/components/notifications/NotificationFooter.tsx > security alerts should use github icon for avatar > Repository Dependabot Alerts Thread 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <div
        class="text-xs opacity-80 prc-Stack-Stack-UQ9k6"
        data-align="center"
        data-direction="horizontal"
        data-gap="condensed"
        data-justify="start"
        data-padding="none"
        data-wrap="wrap"
      >
        <button
          data-testid="view-profile"
          title="gitify-app"
          type="button"
        >
          <div
            class="prc-Stack-Stack-UQ9k6"
            data-align="center"
            data-direction="horizontal"
            data-gap="condensed"
            data-justify="start"
            data-padding="none"
            data-testid="avatar"
            data-wrap="nowrap"
          >
            <img
              alt="gitify-app"
              class="prc-Avatar-Avatar-0xaUi"
              data-component="Avatar"
              height="14"
              src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
              style="--avatarSize-regular: 14px;"
              width="14"
            />
          </div>
        </button>
        <div
          class="prc-Stack-Stack-UQ9k6"
          data-align="stretch"
          data-direction="horizontal"
          data-gap="none"
          data-justify="start"
          data-padding="none"
          data-wrap="nowrap"
        >
          <span
            class="pr-1 prc-Text-Text-9mHv3"
            title="You're watching the repository."
          >
            Updated
          </span>
          <relative-time
            datetime="2017-05-20T17:51:57.000Z"
          >
            #shadow-root
            May 20, 2017
          </relative-time>
        </div>
        <div
          class="flex gap-1"
        >
          <button
            aria-describedby="_r_4_"
            type="button"
          >
            <span
              class="hover:bg-gitify-notification-pill-hover prc-Label-Label-qG-Zu"
              data-size="small"
              data-variant="secondary"
              tabindex="0"
            >
              <div
                class="prc-Stack-Stack-UQ9k6"
                data-align="center"
                data-direction="horizontal"
                data-gap="none"
                data-justify="start"
                data-padding="none"
                data-wrap="nowrap"
              >
                <svg
                  aria-hidden="true"
                  class="octicon octicon-check text-gitify-icon-open"
                  display="inline-block"
                  fill="currentColor"
                  focusable="false"
                  height="12"
                  overflow="visible"
                  style="vertical-align: text-bottom;"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <path
                    d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
                  />
                </svg>
                <span
                  class="text-xxs px-1 prc-Text-Text-9mHv3"
                >
                  1
                </span>
              </div>
            </span>
          </button>
          <span
            aria-hidden="true"
            class="prc-TooltipV2-Tooltip-tLeuB"
            data-direction="s"
            id="_r_4_"
            popover="auto"
            role="tooltip"
          >
            octocat approved these changes
          </span>
          <button
            aria-describedby="_r_5_"
            type="button"
          >
            <span
              class="hover:bg-gitify-notification-pill-hover prc-Label-Label-qG-Zu"
              data-size="small"
              data-variant="secondary"
              tabindex="0"
            >
              <div
                class="prc-Stack-Stack-UQ9k6"
                data-align="center"
                data-direction="horizontal"
                data-gap="none"
                data-justify="start"
                data-padding="none"
                data-wrap="nowrap"
              >
                <svg
                  aria-hidden="true"
                  class="octicon octicon-file-diff text-gitify-icon-closed"
                  display="inline-block"
                  fill="currentColor"
                  focusable="false"
                  height="12"
                  overflow="visible"
                  style="vertical-align: text-bottom;"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <path
                    d="M1 1.75C1 .784 1.784 0 2.75 0h7.586c.464 0 .909.184 1.237.513l2.914 2.914c.329.328.513.773.513 1.237v9.586A1.75 1.75 0 0 1 13.25 16H2.75A1.75 1.75 0 0 1 1 14.25Zm1.75-.25a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h10.5a.25.25 0 0 0 .25-.25V4.664a.25.25 0 0 0-.073-.177l-2.914-2.914a.25.25 0 0 0-.177-.073ZM8 3.25a.75.75 0 0 1 .75.75v1.5h1.5a.75.75 0 0 1 0 1.5h-1.5v1.5a.75.75 0 0 1-1.5 0V7h-1.5a.75.75 0 0 1 0-1.5h1.5V4A.75.75 0 0 1 8 3.25Zm-3 8a.75.75 0 0 1 .75-.75h4.5a.75.75 0 0 1 0 1.5h-4.5a.75.75 0 0 1-.75-.75Z"
                  />
                </svg>
                <span
                  class="text-xxs px-1 prc-Text-Text-9mHv3"
                >
                  1
                </span>
              </div>
            </span>
          </button>
          <span
            aria-hidden="true"
            class="prc-TooltipV2-Tooltip-tLeuB"
            data-direction="s"
            id="_r_5_"
            popover="auto"
            role="tooltip"
          >
            gitify-app requested changes
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer/components/notifications/NotificationFooter.tsx > security alerts should use github icon for avatar > Repository Vulnerability Alert 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <div
        class="text-xs opacity-80 prc-Stack-Stack-UQ9k6"
        data-align="center"
        data-direction="horizontal"
        data-gap="condensed"
        data-justify="start"
        data-padding="none"
        data-wrap="wrap"
      >
        <button
          data-testid="view-profile"
          title="gitify-app"
          type="button"
        >
          <div
            class="prc-Stack-Stack-UQ9k6"
            data-align="center"
            data-direction="horizontal"
            data-gap="condensed"
            data-justify="start"
            data-padding="none"
            data-testid="avatar"
            data-wrap="nowrap"
          >
            <img
              alt="gitify-app"
              class="prc-Avatar-Avatar-0xaUi"
              data-component="Avatar"
              height="14"
              src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
              style="--avatarSize-regular: 14px;"
              width="14"
            />
          </div>
        </button>
        <div
          class="prc-Stack-Stack-UQ9k6"
          data-align="stretch"
          data-direction="horizontal"
          data-gap="none"
          data-justify="start"
          data-padding="none"
          data-wrap="nowrap"
        >
          <span
            class="pr-1 prc-Text-Text-9mHv3"
            title="You're watching the repository."
          >
            Updated
          </span>
          <relative-time
            datetime="2017-05-20T17:51:57.000Z"
          >
            #shadow-root
            May 20, 2017
          </relative-time>
        </div>
        <div
          class="flex gap-1"
        >
          <button
            aria-describedby="_r_7_"
            type="button"
          >
            <span
              class="hover:bg-gitify-notification-pill-hover prc-Label-Label-qG-Zu"
              data-size="small"
              data-variant="secondary"
              tabindex="0"
            >
              <div
                class="prc-Stack-Stack-UQ9k6"
                data-align="center"
                data-direction="horizontal"
                data-gap="none"
                data-justify="start"
                data-padding="none"
                data-wrap="nowrap"
              >
                <svg
                  aria-hidden="true"
                  class="octicon octicon-check text-gitify-icon-open"
                  display="inline-block"
                  fill="currentColor"
                  focusable="false"
                  height="12"
                  overflow="visible"
                  style="vertical-align: text-bottom;"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <path
                    d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
                  />
                </svg>
                <span
                  class="text-xxs px-1 prc-Text-Text-9mHv3"
                >
                  1
                </span>
              </div>
            </span>
          </button>
          <span
            aria-hidden="true"
            class="prc-TooltipV2-Tooltip-tLeuB"
            data-direction="s"
            id="_r_7_"
            popover="auto"
            role="tooltip"
          >
            octocat approved these changes
          </span>
          <button
            aria-describedby="_r_8_"
            type="button"
          >
            <span
              class="hover:bg-gitify-notification-pill-hover prc-Label-Label-qG-Zu"
              data-size="small"
              data-variant="secondary"
              tabindex="0"
            >
              <div
                class="prc-Stack-Stack-UQ9k6"
                data-align="center"
                data-direction="horizontal"
                data-gap="none"
                data-justify="start"
                data-padding="none"
                data-wrap="nowrap"
              >
                <svg
                  aria-hidden="true"
                  class="octicon octicon-file-diff text-gitify-icon-closed"
                  display="inline-block"
                  fill="currentColor"
                  focusable="false"
                  height="12"
                  overflow="visible"
                  style="vertical-align: text-bottom;"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <path
                    d="M1 1.75C1 .784 1.784 0 2.75 0h7.586c.464 0 .909.184 1.237.513l2.914 2.914c.329.328.513.773.513 1.237v9.586A1.75 1.75 0 0 1 13.25 16H2.75A1.75 1.75 0 0 1 1 14.25Zm1.75-.25a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h10.5a.25.25 0 0 0 .25-.25V4.664a.25.25 0 0 0-.073-.177l-2.914-2.914a.25.25 0 0 0-.177-.073ZM8 3.25a.75.75 0 0 1 .75.75v1.5h1.5a.75.75 0 0 1 0 1.5h-1.5v1.5a.75.75 0 0 1-1.5 0V7h-1.5a.75.75 0 0 1 0-1.5h1.5V4A.75.75 0 0 1 8 3.25Zm-3 8a.75.75 0 0 1 .75-.75h4.5a.75.75 0 0 1 0 1.5h-4.5a.75.75 0 0 1-.75-.75Z"
                  />
                </svg>
                <span
                  class="text-xxs px-1 prc-Text-Text-9mHv3"
                >
                  1
                </span>
              </div>
            </span>
          </button>
          <span
            aria-hidden="true"
            class="prc-TooltipV2-Tooltip-tLeuB"
            data-direction="s"
            id="_r_8_"
            popover="auto"
            role="tooltip"
          >
            gitify-app requested changes
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer/components/notifications/NotificationFooter.tsx > should default to known avatar if no user found 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <div
        class="text-xs opacity-80 prc-Stack-Stack-UQ9k6"
        data-align="center"
        data-direction="horizontal"
        data-gap="condensed"
        data-justify="start"
        data-padding="none"
        data-wrap="wrap"
      >
        <div
          class="prc-Stack-Stack-UQ9k6"
          data-align="center"
          data-direction="horizontal"
          data-gap="condensed"
          data-justify="start"
          data-padding="none"
          data-testid="avatar"
          data-wrap="nowrap"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-feed-person"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="14"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="14"
          >
            <path
              d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16Zm.847-8.145a2.502 2.502 0 1 0-1.694 0C5.471 8.261 4 9.775 4 11c0 .395.145.995 1 .995h6c.855 0 1-.6 1-.995 0-1.224-1.47-2.74-3.153-3.145Z"
            />
          </svg>
        </div>
        <div
          class="prc-Stack-Stack-UQ9k6"
          data-align="stretch"
          data-direction="horizontal"
          data-gap="none"
          data-justify="start"
          data-padding="none"
          data-wrap="nowrap"
        >
          <span
            class="pr-1 prc-Text-Text-9mHv3"
            title="You're watching the repository."
          >
            Updated
          </span>
          <relative-time
            datetime="2017-05-20T17:51:57.000Z"
          >
            #shadow-root
            May 20, 2017
          </relative-time>
        </div>
        <div
          class="flex gap-1"
        >
          <button
            aria-describedby="_r_a_"
            type="button"
          >
            <span
              class="hover:bg-gitify-notification-pill-hover prc-Label-Label-qG-Zu"
              data-size="small"
              data-variant="secondary"
              tabindex="0"
            >
              <div
                class="prc-Stack-Stack-UQ9k6"
                data-align="center"
                data-direction="horizontal"
                data-gap="none"
                data-justify="start"
                data-padding="none"
                data-wrap="nowrap"
              >
                <svg
                  aria-hidden="true"
                  class="octicon octicon-check text-gitify-icon-open"
                  display="inline-block"
                  fill="currentColor"
                  focusable="false"
                  height="12"
                  overflow="visible"
                  style="vertical-align: text-bottom;"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <path
                    d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
                  />
                </svg>
                <span
                  class="text-xxs px-1 prc-Text-Text-9mHv3"
                >
                  1
                </span>
              </div>
            </span>
          </button>
          <span
            aria-hidden="true"
            class="prc-TooltipV2-Tooltip-tLeuB"
            data-direction="s"
            id="_r_a_"
            popover="auto"
            role="tooltip"
          >
            octocat approved these changes
          </span>
          <button
            aria-describedby="_r_b_"
            type="button"
          >
            <span
              class="hover:bg-gitify-notification-pill-hover prc-Label-Label-qG-Zu"
              data-size="small"
              data-variant="secondary"
              tabindex="0"
            >
              <div
                class="prc-Stack-Stack-UQ9k6"
                data-align="center"
                data-direction="horizontal"
                data-gap="none"
                data-justify="start"
                data-padding="none"
                data-wrap="nowrap"
              >
                <svg
                  aria-hidden="true"
                  class="octicon octicon-file-diff text-gitify-icon-closed"
                  display="inline-block"
                  fill="currentColor"
                  focusable="false"
                  height="12"
                  overflow="visible"
                  style="vertical-align: text-bottom;"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <path
                    d="M1 1.75C1 .784 1.784 0 2.75 0h7.586c.464 0 .909.184 1.237.513l2.914 2.914c.329.328.513.773.513 1.237v9.586A1.75 1.75 0 0 1 13.25 16H2.75A1.75 1.75 0 0 1 1 14.25Zm1.75-.25a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h10.5a.25.25 0 0 0 .25-.25V4.664a.25.25 0 0 0-.073-.177l-2.914-2.914a.25.25 0 0 0-.177-.073ZM8 3.25a.75.75 0 0 1 .75.75v1.5h1.5a.75.75 0 0 1 0 1.5h-1.5v1.5a.75.75 0 0 1-1.5 0V7h-1.5a.75.75 0 0 1 0-1.5h1.5V4A.75.75 0 0 1 8 3.25Zm-3 8a.75.75 0 0 1 .75-.75h4.5a.75.75 0 0 1 0 1.5h-4.5a.75.75 0 0 1-.75-.75Z"
                  />
                </svg>
                <span
                  class="text-xxs px-1 prc-Text-Text-9mHv3"
                >
                  1
                </span>
              </div>
            </span>
          </button>
          <span
            aria-hidden="true"
            class="prc-TooltipV2-Tooltip-tLeuB"
            data-direction="s"
            id="_r_b_"
            popover="auto"
            role="tooltip"
          >
            gitify-app requested changes
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer/components/notifications/NotificationFooter.tsx > should render itself & its children 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <div
        class="text-xs opacity-80 prc-Stack-Stack-UQ9k6"
        data-align="center"
        data-direction="horizontal"
        data-gap="condensed"
        data-justify="start"
        data-padding="none"
        data-wrap="wrap"
      >
        <button
          data-testid="view-profile"
          title="gitify-app"
          type="button"
        >
          <div
            class="prc-Stack-Stack-UQ9k6"
            data-align="center"
            data-direction="horizontal"
            data-gap="condensed"
            data-justify="start"
            data-padding="none"
            data-testid="avatar"
            data-wrap="nowrap"
          >
            <img
              alt="gitify-app"
              class="prc-Avatar-Avatar-0xaUi"
              data-component="Avatar"
              height="14"
              src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
              style="--avatarSize-regular: 14px;"
              width="14"
            />
          </div>
        </button>
        <div
          class="prc-Stack-Stack-UQ9k6"
          data-align="stretch"
          data-direction="horizontal"
          data-gap="none"
          data-justify="start"
          data-padding="none"
          data-wrap="nowrap"
        >
          <span
            class="pr-1 prc-Text-Text-9mHv3"
            title="You're watching the repository."
          >
            Updated
          </span>
          <relative-time
            datetime="2017-05-20T17:51:57.000Z"
          >
            #shadow-root
            May 20, 2017
          </relative-time>
        </div>
        <div
          class="flex gap-1"
        >
          <button
            aria-describedby="_r_1_"
            type="button"
          >
            <span
              class="hover:bg-gitify-notification-pill-hover prc-Label-Label-qG-Zu"
              data-size="small"
              data-variant="secondary"
              tabindex="0"
            >
              <div
                class="prc-Stack-Stack-UQ9k6"
                data-align="center"
                data-direction="horizontal"
                data-gap="none"
                data-justify="start"
                data-padding="none"
                data-wrap="nowrap"
              >
                <svg
                  aria-hidden="true"
                  class="octicon octicon-check text-gitify-icon-open"
                  display="inline-block"
                  fill="currentColor"
                  focusable="false"
                  height="12"
                  overflow="visible"
                  style="vertical-align: text-bottom;"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <path
                    d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
                  />
                </svg>
                <span
                  class="text-xxs px-1 prc-Text-Text-9mHv3"
                >
                  1
                </span>
              </div>
            </span>
          </button>
          <span
            aria-hidden="true"
            class="prc-TooltipV2-Tooltip-tLeuB"
            data-direction="s"
            id="_r_1_"
            popover="auto"
            role="tooltip"
          >
            octocat approved these changes
          </span>
          <button
            aria-describedby="_r_2_"
            type="button"
          >
            <span
              class="hover:bg-gitify-notification-pill-hover prc-Label-Label-qG-Zu"
              data-size="small"
              data-variant="secondary"
              tabindex="0"
            >
              <div
                class="prc-Stack-Stack-UQ9k6"
                data-align="center"
                data-direction="horizontal"
                data-gap="none"
                data-justify="start"
                data-padding="none"
                data-wrap="nowrap"
              >
                <svg
                  aria-hidden="true"
                  class="octicon octicon-file-diff text-gitify-icon-closed"
                  display="inline-block"
                  fill="currentColor"
                  focusable="false"
                  height="12"
                  overflow="visible"
                  style="vertical-align: text-bottom;"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <path
                    d="M1 1.75C1 .784 1.784 0 2.75 0h7.586c.464 0 .909.184 1.237.513l2.914 2.914c.329.328.513.773.513 1.237v9.586A1.75 1.75 0 0 1 13.25 16H2.75A1.75 1.75 0 0 1 1 14.25Zm1.75-.25a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h10.5a.25.25 0 0 0 .25-.25V4.664a.25.25 0 0 0-.073-.177l-2.914-2.914a.25.25 0 0 0-.177-.073ZM8 3.25a.75.75 0 0 1 .75.75v1.5h1.5a.75.75 0 0 1 0 1.5h-1.5v1.5a.75.75 0 0 1-1.5 0V7h-1.5a.75.75 0 0 1 0-1.5h1.5V4A.75.75 0 0 1 8 3.25Zm-3 8a.75.75 0 0 1 .75-.75h4.5a.75.75 0 0 1 0 1.5h-4.5a.75.75 0 0 1-.75-.75Z"
                  />
                </svg>
                <span
                  class="text-xxs px-1 prc-Text-Text-9mHv3"
                >
                  1
                </span>
              </div>
            </span>
          </button>
          <span
            aria-hidden="true"
            class="prc-TooltipV2-Tooltip-tLeuB"
            data-direction="s"
            id="_r_2_"
            popover="auto"
            role="tooltip"
          >
            gitify-app requested changes
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
